# natural_classification

./: CMakeLists.txt  CMakeLists.txt~  TODO.md
dep/: CMakeLists.txt
dep/scidi/: CMakeLists.txt
dep/scidi/include/: CIdelObject.h  CMakeLists.txt  Callback.h  Classificator.cpp  Classificator.h  CodeTable.cpp  CodeTable.h  Constants.h  FileManager.cpp  FileManager.h  IStorage.h  MainManager.cpp  MainManager.h  NaiveGenerator.cpp  NaiveGenerator.h  Reporter.h  Rule.cpp  Rule.h  RuleManager.h  RulesStorage.cpp  RulesStorage.h  Runnable.h  SConscript  SEQSElem.cpp  SEQSElem.h  SEQStorage.cpp  SEQStorage.h  Sequence.cpp  Sequence.h  Thread.cpp  Thread.h  Tunnels.h  setup.h
dep/scidi/include/manager/: CMakeLists.txt  Carcass.cpp  Carcass.h  DataProcessor.cpp  DataProcessor.h  IProcessor.cpp  IProcessor.h  ObjProcessor.cpp  ObjProcessor.h  ProcessorSettings.cpp  ProcessorSettings.h  RegProcessor.cpp  RegProcessor.h  SConstruct  StringIProcessor.cpp  StringIProcessor.h
dep/sd/include/: reader.h  tst.h
ext/gtest/: CMakeLists.txt
ext/json/: CMakeLists.txt
led_data_generator/: CMakeLists.txt
natclass/: CMakeLists.txt
natclass/include/natclass/: dataset.h  predicate.h  problem.h  problem_builder.h  rule.h  rule_set.h  utils.h
natclass/src/: dataset.cpp  predicate.cpp  problem.cpp  problem_builder.cpp  rule.cpp
natclass/test/: dataset_tests.cpp  predicate_test.cpp  problem_builder_tests.cpp  problem_tests.cpp  rule_tests.cpp  test_data.h
notebooks/: rules_numb_1noise_240
notebooks/compiled_wrapper/: scidi_wrapper.py
notebooks/experiment_notebooks/: Numbers_partial.ipynb  noisy_indexes.ipynb  numbers.ipynb  numbers_clean.ipynb  sd_and_numbers.ipynb  sd_dummy_negation.ipynb  sd_rules.ipynb
notebooks/experiment_notebooks/.ipynb_checkpoints/: noisy_indexes-checkpoint.ipynb  numbers-checkpoint.ipynb
notebooks/test_data/: digits-clean-x10.csv  led_500_5  positive.seq  post-indexes.json
notebooks/test_data/numbers/: digits+noise.csv  rules.txt  rules2.txt
notebooks/test_notebooks/: Postcode_experiment.ipynb  get_set_data_test.ipynb  wrapper_interface_tests.ipynb
notebooks/test_notebooks/.ipynb_checkpoints/: Postcode_experiment-checkpoint.ipynb  get_set_data_test-checkpoint.ipynb
tests/: CMakeLists.txt  CMakeLists.txt~  main.cpp
wrapper/: CIdelObject.cpp  CMakeLists.txt  CMakeLists.txt~  MyClassificator.cpp  MyClassificator.h  idealizer.cpp  idealizer.h  natural_classifier.cpp  natural_classifier.h  object_idealizer.cpp  object_idealizer.h  ruleparser.cpp  ruleparser.h  scidi_wrapper.cpp  scidi_wrapper.h  scidi_wrapper.i  sdrulegenerator.cpp  sdrulegenerator.h
wrapper/include/wrapper/: data_wrapper.h  ideal_object_wrapper.h  object_idealizer.h  rules_wrapper.h  scidi_logger.h  scidi_wrapper.h  sdrulegenerator.h  wrapper.h
wrapper/src/: data_wrapper.cpp  ideal_object_wrapper.cpp  object_idealizer.cpp  ruleparser.cpp  rules_wrapper.cpp  scidi_wrapper.cpp  sdrulegenerator.cpp  wrapper.cpp
wrapper/swig/: scidi_wrapper.i  wrapper.i
wrapper/test/: main.cpp
